Fix font size/spacing and button height

--- a/core/app/themes/suite8/css/components/_button.scss
+++ b/core/app/themes/suite8/css/components/_button.scss
@@ -136,8 +136,10 @@ button {
   text-transform: uppercase;
   padding: 0.3em 1em;
   font-weight: 400;
-  height: 2.1em;
+  height: 2.2em;
   line-height: 1.6em;
+  font-size: 0.8rem;
+  letter-spacing: 1px;
 }
 
 .action-button:hover {
